# bot-institucional-qwen-trae

./: .gitignore  AUDITORIA_CIP_LITE.md  DIAGNOSTICO_INTEGRACION_CHAT.md  Dockerfile  MEMORIA_DESCRIPTIVA_CIP.md  SETUP_Y_PROGRESO.md  docker-compose.yml
cip-lite/: .env.example  .gitignore  ANALISIS_ESTRATEGIA_CHAT.md  ARCHITECTURE.md  AUDITORIA_CIERRE.md  AUDITORIA_COMPLETA.md  AUDITORIA_FINAL.md  BACKTEST_PAPER_TRADING_README.md  CHANGELOG.md  DAILY_INTEL.md  GUIA_INSTALACION.md  INSTITUCIONAL_ANALISIS.md  INTEGRACION_FINAL.md  PROXIMOS_PASOS_IMPLEMENTADOS.md  README.md  REGISTRO_TAREAS_v1.0.0.md  REPORT_OPTIMIZACION_V4.md  REQUISITOS.md  RESUMEN_IMPLEMENTACION.md  TEORIA.md  TRAZABILIDAD.md  audit_baseline.py  aura_x.sh  backtest_optimized_v4.py  backtest_profesional_cline.py  cline_master.py  compare_strategies.py  comprehensive_backtest_analysis.py  config.json  debug_xauusd.py  generate_daily_intel.py  main.py  populate_sample_trades.py  pytest.ini  requirements.txt  run_advanced_backtest.py  run_backtest.py  run_full_backtest.py  run_institutional_analysis.py  run_institutional_backtest.py  (+10 more)
cip-lite/.trae/: rules.md
cip-lite/01_data_ingestion/: historical_downloader.py
cip-lite/fast-path/: Cargo.toml
cip-lite/fast-path/src/: main.rs
config/: prometheus.yml
docs/: ANALISIS_CHAT_INTEGRACION.md  API_DOCUMENTATION.md  FASE_2_3_REPORTE.md  FASE_2_4_REPORTE.md  FASE_2_6_REPORTE.md  FASE_2_FINAL.md  FASE_3_FINAL.md  FASE_4_FINAL.md  FASE_5_FINAL.md  IMPEDIMENTO_FASE2_3.md  INFORME_CALIDAD_FASE2_2.md  REGISTRO_EJECUCION.md  REGISTRO_EJECUCION_FASE5.md
(+107 files in other folders)
